--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     name: card-service
   cloud:
     config:
-      uri: http://localhost:8090
+      uri: http://bootcamp-project.azurewebsites.net/
 management:
   security:
     enabled: false
